[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentfield"
version = "0.1.85-rc.1"
description = "Python SDK for the AgentField control plane"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "AgentField Maintainers"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10, <3.14"
dependencies = [
    "fastapi",
    "uvicorn",
    "requests>=2.28",
    "pydantic>=2.0",
    "litellm",
    "psutil",
    "PyYAML>=6.0",
    "aiohttp>=3.8",
    "websockets",
    "fal-client>=0.5.0",
    "cryptography>=41.0"
]
keywords = ["agentfield", "sdk", "agents"]

[project.urls]
Homepage = "https://github.com/Agent-Field/agentfield"
Documentation = "https://github.com/Agent-Field/agentfield/tree/main/docs"
Issues = "https://github.com/Agent-Field/agentfield/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentfield*"]
exclude = ["tests*", "examples*"]

[project.optional-dependencies]
harness-claude = [
    "claude-agent-sdk>=0.1",
]
harness = [
    "claude-agent-sdk>=0.1",
]
dev = [
    "pytest>=9.0.3,<10",
    "pytest-asyncio>=1.3,<2",
    "pytest-cov>=4.1,<5",
    "pytest-httpx>=0.30,<1",
    "responses>=0.23,<0.26",
    "respx>=0.20,<0.22",
    "freezegun>=1.2,<2",
    "syrupy>=5,<6",
    "hypothesis>=6.88,<7",
    "pytest-socket>=0.6,<0.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "smoke: fast sanity checks",
    "functional: end-to-end behavior within SDK boundaries",
    "contract: API/interface stability tests",
    "unit: isolated unit tests",
    "integration: tests that can touch network/services",
    "harness_live: live tests that invoke real coding agents (claude, codex, opencode) — costs real money",
    "httpx_mock: pytest-httpx marker for configuring mock behavior"
]
addopts = "-ra -q -m \"not harness_live\" --strict-markers --strict-config --cov=agentfield.client --cov=agentfield.agent_field_handler --cov=agentfield.execution_context --cov=agentfield.execution_state --cov=agentfield.memory --cov=agentfield.rate_limiter --cov=agentfield.result_cache --cov-report=term-missing:skip-covered"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["agentfield"]
omit = [
    "agentfield/logger.py",
    "agentfield/types.py",
]
